[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/signal.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.133333, 0.784314, 0.862745, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 9.42943, 0, 0, Vector2( 0.257662, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 0.04
gravity = Vector3( 0, 0, 0 )
angular_velocity = 0.0
scale_curve = SubResource( 3 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.05, 0.05, 0.05 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.133333, 0.784314, 0.862745, 1 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.43739, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
spread = 180.0
gravity = Vector3( 0, -2, 0 )
initial_velocity = 0.2
angular_velocity = 0.0
scale_curve = SubResource( 8 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.1, 0.1, 0.1 )

[node name="signal" type="RigidBody"]
collision_layer = 4
collision_mask = 0
linear_velocity = Vector3( 0, -10, 0 )
script = ExtResource( 1 )

[node name="particles_local" type="Particles" parent="."]
material_override = SubResource( 1 )
amount = 20
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="particles_trail" type="Particles" parent="."]
material_override = SubResource( 6 )
amount = 30
lifetime = 0.5
local_coords = false
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 5 )

[node name="collision_shape" type="CollisionShape" parent="."]
shape = SubResource( 10 )

[node name="omni_light" type="OmniLight" parent="."]
light_color = Color( 0.0196078, 0.92549, 0.898039, 1 )
light_energy = 2.0
omni_range = 2.0

[node name="death_timer" type="Timer" parent="."]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
